@@ -21,7 +21,7 @@ import org.elasticsearch.search.aggregations.Aggregation;
 import org.elasticsearch.search.aggregations.InternalAggregation;
 import org.elasticsearch.search.aggregations.InternalAggregations;
 import org.elasticsearch.search.aggregations.bucket.MultiBucketsAggregation.Bucket;
-import org.elasticsearch.search.aggregations.bucket.global.Global;
+import org.elasticsearch.search.aggregations.bucket.SingleBucketAggregation;
 import org.elasticsearch.search.aggregations.bucket.histogram.Histogram;
 import org.elasticsearch.test.ESIntegTestCase;
 import org.elasticsearch.test.ESIntegTestCase.ClusterScope;
@@ -332,13 +332,10 @@ public class ScriptedMetricIT extends ESIntegTestCase {
             // When using the MockScriptPlugin we can map File scripts to inline scripts:
             // the name of the file script is used in test method while the source of the file script
             // must match a predefined script from CustomScriptPlugin.pluginScripts() method
-            Files.write(scripts.resolve("init_script.mockscript"), "vars.multiplier = 3".getBytes("UTF-8"));
-            Files.write(scripts.resolve("map_script.mockscript"), "state.list.add(vars.multiplier)".getBytes("UTF-8"));
-            Files.write(scripts.resolve("combine_script.mockscript"), "sum state values as a new aggregation".getBytes("UTF-8"));
-            Files.write(
-                scripts.resolve("reduce_script.mockscript"),
-                "sum all states (lists) values as a new aggregation".getBytes("UTF-8")
-            );
+            Files.writeString(scripts.resolve("init_script.mockscript"), "vars.multiplier = 3");
+            Files.writeString(scripts.resolve("map_script.mockscript"), "state.list.add(vars.multiplier)");
+            Files.writeString(scripts.resolve("combine_script.mockscript"), "sum state values as a new aggregation");
+            Files.writeString(scripts.resolve("reduce_script.mockscript"), "sum all states (lists) values as a new aggregation");
         } catch (IOException e) {
             throw new RuntimeException("failed to create scripts");
         }
@@ -358,7 +355,7 @@ public class ScriptedMetricIT extends ESIntegTestCase {
             prepareSearch("idx").setQuery(matchAllQuery())
                 .addAggregation(scriptedMetric("scripted").mapScript(mapScript).combineScript(combineScript).reduceScript(reduceScript)),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(numDocs));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(numDocs));
 
                 Aggregation aggregation = response.getAggregations().get("scripted");
                 assertThat(aggregation, notNullValue());
@@ -407,7 +404,7 @@ public class ScriptedMetricIT extends ESIntegTestCase {
                         .reduceScript(reduceScript)
                 ),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(numDocs));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(numDocs));
 
                 Aggregation aggregation = response.getAggregations().get("scripted");
                 assertThat(aggregation, notNullValue());
@@ -467,7 +464,7 @@ public class ScriptedMetricIT extends ESIntegTestCase {
                         )
                 ),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(numDocs));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(numDocs));
 
                 Aggregation aggregation = response.getAggregations().get("scripted");
                 assertThat(aggregation, notNullValue());
@@ -522,7 +519,7 @@ public class ScriptedMetricIT extends ESIntegTestCase {
                     scriptedMetric("scripted").params(params).mapScript(mapScript).combineScript(combineScript).reduceScript(reduceScript)
                 ),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(numDocs));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(numDocs));
 
                 Aggregation aggregation = response.getAggregations().get("scripted");
                 assertThat(aggregation, notNullValue());
@@ -586,7 +583,7 @@ public class ScriptedMetricIT extends ESIntegTestCase {
                         .reduceScript(reduceScript)
                 ),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(numDocs));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(numDocs));
 
                 Aggregation aggregation = response.getAggregations().get("scripted");
                 assertThat(aggregation, notNullValue());
@@ -655,7 +652,7 @@ public class ScriptedMetricIT extends ESIntegTestCase {
                         .reduceScript(reduceScript)
                 ),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(numDocs));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(numDocs));
 
                 Aggregation aggregation = response.getAggregations().get("scripted");
                 assertThat(aggregation, notNullValue());
@@ -714,9 +711,9 @@ public class ScriptedMetricIT extends ESIntegTestCase {
                     )
                 ),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(numDocs));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(numDocs));
 
-                Global global = response.getAggregations().get("global");
+                SingleBucketAggregation global = response.getAggregations().get("global");
                 assertThat(global, notNullValue());
                 assertThat(global.getName(), equalTo("global"));
                 assertThat(global.getDocCount(), equalTo(numDocs));
@@ -773,7 +770,7 @@ public class ScriptedMetricIT extends ESIntegTestCase {
                     scriptedMetric("scripted").params(params).mapScript(mapScript).combineScript(combineScript).reduceScript(reduceScript)
                 ),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(numDocs));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(numDocs));
 
                 Aggregation aggregation = response.getAggregations().get("scripted");
                 assertThat(aggregation, notNullValue());
@@ -824,7 +821,7 @@ public class ScriptedMetricIT extends ESIntegTestCase {
                         .reduceScript(reduceScript)
                 ),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(numDocs));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(numDocs));
 
                 Aggregation aggregation = response.getAggregations().get("scripted");
                 assertThat(aggregation, notNullValue());
@@ -869,7 +866,7 @@ public class ScriptedMetricIT extends ESIntegTestCase {
                     scriptedMetric("scripted").params(params).mapScript(mapScript).combineScript(combineScript).reduceScript(reduceScript)
                 ),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(numDocs));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(numDocs));
 
                 Aggregation aggregation = response.getAggregations().get("scripted");
                 assertThat(aggregation, notNullValue());
@@ -928,7 +925,7 @@ public class ScriptedMetricIT extends ESIntegTestCase {
                         .reduceScript(reduceScript)
                 ),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(numDocs));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(numDocs));
 
                 Aggregation aggregation = response.getAggregations().get("scripted");
                 assertThat(aggregation, notNullValue());
@@ -964,7 +961,7 @@ public class ScriptedMetricIT extends ESIntegTestCase {
                         .reduceScript(new Script(ScriptType.STORED, null, "reduceScript_stored", Collections.emptyMap()))
                 ),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(numDocs));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(numDocs));
 
                 Aggregation aggregation = response.getAggregations().get("scripted");
                 assertThat(aggregation, notNullValue());
@@ -1025,7 +1022,7 @@ public class ScriptedMetricIT extends ESIntegTestCase {
                         )
                 ),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(numDocs));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(numDocs));
                 Aggregation aggregation = response.getAggregations().get("histo");
                 assertThat(aggregation, notNullValue());
                 assertThat(aggregation, instanceOf(Histogram.class));
@@ -1099,7 +1096,7 @@ public class ScriptedMetricIT extends ESIntegTestCase {
                         )
                 ),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(2L));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(2L));
                 Histogram histo = response.getAggregations().get("histo");
                 assertThat(histo, notNullValue());
                 Bucket bucket = histo.getBuckets().get(1);
