@@ -7,27 +7,16 @@
 package org.elasticsearch.xpack.ilm;
 
 import org.elasticsearch.client.internal.Client;
-import org.elasticsearch.cluster.ClusterName;
-import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.LifecycleExecutionState;
-import org.elasticsearch.cluster.metadata.Metadata;
-import org.elasticsearch.cluster.node.DiscoveryNode;
-import org.elasticsearch.cluster.node.DiscoveryNodeUtils;
-import org.elasticsearch.cluster.node.DiscoveryNodes;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.transport.TransportAddress;
-import org.elasticsearch.common.xcontent.ChunkedToXContent;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.IndexVersion;
 import org.elasticsearch.test.ESTestCase;
-import org.elasticsearch.test.NodeRoles;
 import org.elasticsearch.xcontent.NamedXContentRegistry;
-import org.elasticsearch.xcontent.ToXContent;
-import org.elasticsearch.xcontent.XContentBuilder;
-import org.elasticsearch.xcontent.json.JsonXContent;
 import org.elasticsearch.xpack.core.ilm.ErrorStep;
 import org.elasticsearch.xpack.core.ilm.IndexLifecycleMetadata;
 import org.elasticsearch.xpack.core.ilm.InitializePolicyContextStep;
@@ -41,12 +30,11 @@ import org.elasticsearch.xpack.core.ilm.MockStep;
 import org.elasticsearch.xpack.core.ilm.OperationMode;
 import org.elasticsearch.xpack.core.ilm.Phase;
 import org.elasticsearch.xpack.core.ilm.PhaseExecutionInfo;
+import org.elasticsearch.xpack.core.ilm.ResizeIndexStep;
 import org.elasticsearch.xpack.core.ilm.ShrinkAction;
-import org.elasticsearch.xpack.core.ilm.ShrinkStep;
 import org.elasticsearch.xpack.core.ilm.Step;
 import org.mockito.Mockito;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -76,7 +64,7 @@ public class PolicyStepsRegistryTests extends ESTestCase {
     public void testGetFirstStep() {
         String policyName = randomAlphaOfLengthBetween(2, 10);
         Step expectedFirstStep = new MockStep(MOCK_STEP_KEY, null);
-        Map<String, Step> firstStepMap = Collections.singletonMap(policyName, expectedFirstStep);
+        Map<String, Step> firstStepMap = Map.of(policyName, expectedFirstStep);
         PolicyStepsRegistry registry = new PolicyStepsRegistry(null, firstStepMap, null, NamedXContentRegistry.EMPTY, null, null);
         Step actualFirstStep = registry.getFirstStep(policyName);
         assertThat(actualFirstStep, sameInstance(expectedFirstStep));
@@ -85,7 +73,7 @@ public class PolicyStepsRegistryTests extends ESTestCase {
     public void testGetFirstStepUnknownPolicy() {
         String policyName = randomAlphaOfLengthBetween(2, 10);
         Step expectedFirstStep = new MockStep(MOCK_STEP_KEY, null);
-        Map<String, Step> firstStepMap = Collections.singletonMap(policyName, expectedFirstStep);
+        Map<String, Step> firstStepMap = Map.of(policyName, expectedFirstStep);
         PolicyStepsRegistry registry = new PolicyStepsRegistry(null, firstStepMap, null, NamedXContentRegistry.EMPTY, null, null);
         Step actualFirstStep = registry.getFirstStep(policyName + "unknown");
         assertNull(actualFirstStep);
@@ -95,7 +83,7 @@ public class PolicyStepsRegistryTests extends ESTestCase {
         Client client = mock(Client.class);
         Mockito.when(client.settings()).thenReturn(Settings.EMPTY);
         LifecyclePolicy policy = LifecyclePolicyTests.randomTimeseriesLifecyclePolicyWithAllPhases("policy");
-        LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(policy, Collections.emptyMap(), 1, randomNonNegativeLong());
+        LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(policy, Map.of(), 1, randomNonNegativeLong());
         String phaseName = randomFrom(policy.getPhases().keySet());
         Phase phase = policy.getPhases().get(phaseName);
         PhaseExecutionInfo pei = new PhaseExecutionInfo(policy.getName(), phase, 1, randomNonNegativeLong());
@@ -119,7 +107,7 @@ public class PolicyStepsRegistryTests extends ESTestCase {
         Step.StepKey errorStepKey = new Step.StepKey(randomAlphaOfLengthBetween(1, 10), randomAlphaOfLengthBetween(1, 10), ErrorStep.NAME);
         Step expectedStep = new ErrorStep(errorStepKey);
         Index index = new Index("test", "uuid");
-        Map<Index, List<Step>> indexSteps = Collections.singletonMap(index, Collections.singletonList(expectedStep));
+        Map<Index, List<Step>> indexSteps = Map.of(index, List.of(expectedStep));
         PolicyStepsRegistry registry = new PolicyStepsRegistry(null, null, null, NamedXContentRegistry.EMPTY, null, null);
         Step actualStep = registry.getStep(emptyMetadata(index), errorStepKey);
         assertThat(actualStep, equalTo(expectedStep));
@@ -143,7 +131,7 @@ public class PolicyStepsRegistryTests extends ESTestCase {
         Client client = mock(Client.class);
         Mockito.when(client.settings()).thenReturn(Settings.EMPTY);
         LifecyclePolicy policy = LifecyclePolicyTests.randomTimeseriesLifecyclePolicy("policy");
-        LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(policy, Collections.emptyMap(), 1, randomNonNegativeLong());
+        LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(policy, Map.of(), 1, randomNonNegativeLong());
         IndexMetadata indexMetadata = IndexMetadata.builder("test")
             .settings(indexSettings(IndexVersion.current(), 1, 0).put(LifecycleSettings.LIFECYCLE_NAME, "policy").build())
             .build();
@@ -158,7 +146,7 @@ public class PolicyStepsRegistryTests extends ESTestCase {
         Client client = mock(Client.class);
         Mockito.when(client.settings()).thenReturn(Settings.EMPTY);
         LifecyclePolicy policy = LifecyclePolicyTests.randomTimeseriesLifecyclePolicyWithAllPhases("policy");
-        LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(policy, Collections.emptyMap(), 1, randomNonNegativeLong());
+        LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(policy, Map.of(), 1, randomNonNegativeLong());
         String phaseName = randomFrom(policy.getPhases().keySet());
         Phase phase = policy.getPhases().get(phaseName);
         PhaseExecutionInfo pei = new PhaseExecutionInfo(policy.getName(), phase, 1, randomNonNegativeLong());
@@ -193,15 +181,14 @@ public class PolicyStepsRegistryTests extends ESTestCase {
             headers.put(randomAlphaOfLength(10), randomAlphaOfLength(10));
             headers.put(randomAlphaOfLength(10), randomAlphaOfLength(10));
         }
-        Map<String, LifecyclePolicyMetadata> policyMap = Collections.singletonMap(
+        Map<String, LifecyclePolicyMetadata> policyMap = Map.of(
             newPolicy.getName(),
             new LifecyclePolicyMetadata(newPolicy, headers, randomNonNegativeLong(), randomNonNegativeLong())
         );
         IndexLifecycleMetadata lifecycleMetadata = new IndexLifecycleMetadata(policyMap, OperationMode.RUNNING);
         LifecycleExecutionState.Builder lifecycleState = LifecycleExecutionState.builder();
         lifecycleState.setPhase("new");
-        Metadata metadata = Metadata.builder()
-            .persistentSettings(settings(IndexVersion.current()).build())
+        ProjectMetadata currentProject = ProjectMetadata.builder(randomProjectIdOrDefault())
             .putCustom(IndexLifecycleMetadata.TYPE, lifecycleMetadata)
             .put(
                 IndexMetadata.builder("test")
@@ -213,27 +200,12 @@ public class PolicyStepsRegistryTests extends ESTestCase {
                     .putCustom(ILM_CUSTOM_METADATA_KEY, lifecycleState.build().asMap())
             )
             .build();
-        try (XContentBuilder builder = JsonXContent.contentBuilder()) {
-            builder.startObject();
-            ChunkedToXContent.wrapAsToXContent(metadata).toXContent(builder, ToXContent.EMPTY_PARAMS);
-            builder.endObject();
-            logger.info("--> metadata: {}", Strings.toString(builder));
-        }
-        String nodeId = randomAlphaOfLength(10);
-        DiscoveryNode masterNode = DiscoveryNodeUtils.builder(nodeId)
-            .applySettings(NodeRoles.masterNode(settings(IndexVersion.current()).build()))
-            .address(new TransportAddress(TransportAddress.META_ADDRESS, 9300))
-            .build();
-        ClusterState currentState = ClusterState.builder(ClusterName.DEFAULT)
-            .metadata(metadata)
-            .nodes(DiscoveryNodes.builder().localNodeId(nodeId).masterNodeId(nodeId).add(masterNode).build())
-            .build();
 
         // start with empty registry
         PolicyStepsRegistry registry = new PolicyStepsRegistry(NamedXContentRegistry.EMPTY, client, null);
 
         // add new policy
-        registry.update(currentState.metadata().custom(IndexLifecycleMetadata.TYPE));
+        registry.update(currentProject.custom(IndexLifecycleMetadata.TYPE));
 
         assertThat(registry.getFirstStep(newPolicy.getName()), equalTo(policySteps.get(0)));
         assertThat(registry.getLifecyclePolicyMap().size(), equalTo(1));
@@ -246,36 +218,30 @@ public class PolicyStepsRegistryTests extends ESTestCase {
         for (Step step : policySteps) {
             LifecycleExecutionState.Builder newIndexState = LifecycleExecutionState.builder();
             newIndexState.setPhase(step.getKey().phase());
-            currentState = ClusterState.builder(currentState)
-                .metadata(
-                    Metadata.builder(currentState.metadata())
-                        .put(
-                            IndexMetadata.builder(currentState.metadata().index("test"))
-                                .settings(Settings.builder().put(currentState.metadata().index("test").getSettings()))
-                                .putCustom(ILM_CUSTOM_METADATA_KEY, newIndexState.build().asMap())
-                        )
+            currentProject = ProjectMetadata.builder(currentProject)
+                .put(
+                    IndexMetadata.builder(currentProject.index("test"))
+                        .settings(Settings.builder().put(currentProject.index("test").getSettings()))
+                        .putCustom(ILM_CUSTOM_METADATA_KEY, newIndexState.build().asMap())
                 )
-                .nodes(DiscoveryNodes.builder().localNodeId(nodeId).masterNodeId(nodeId).add(masterNode).build())
                 .build();
-            registry.update(currentState.metadata().custom(IndexLifecycleMetadata.TYPE));
+            registry.update(currentProject.custom(IndexLifecycleMetadata.TYPE));
             assertThat(registeredStepsForPolicy.get(step.getKey()), equalTo(step));
-            assertThat(registry.getStep(metadata.index(index), step.getKey()), equalTo(step));
+            assertThat(registry.getStep(currentProject.index(index), step.getKey()), equalTo(step));
         }
 
         Map<String, LifecyclePolicyMetadata> registryPolicyMap = registry.getLifecyclePolicyMap();
         Map<String, Step> registryFirstStepMap = registry.getFirstStepMap();
         Map<String, Map<Step.StepKey, Step>> registryStepMap = registry.getStepMap();
-        registry.update(currentState.metadata().custom(IndexLifecycleMetadata.TYPE));
+        registry.update(currentProject.custom(IndexLifecycleMetadata.TYPE));
         assertThat(registry.getLifecyclePolicyMap(), equalTo(registryPolicyMap));
         assertThat(registry.getFirstStepMap(), equalTo(registryFirstStepMap));
         assertThat(registry.getStepMap(), equalTo(registryStepMap));
 
         // remove policy
-        lifecycleMetadata = new IndexLifecycleMetadata(Collections.emptyMap(), OperationMode.RUNNING);
-        currentState = ClusterState.builder(currentState)
-            .metadata(Metadata.builder(metadata).putCustom(IndexLifecycleMetadata.TYPE, lifecycleMetadata))
-            .build();
-        registry.update(currentState.metadata().custom(IndexLifecycleMetadata.TYPE));
+        lifecycleMetadata = new IndexLifecycleMetadata(Map.of(), OperationMode.RUNNING);
+        currentProject = ProjectMetadata.builder(currentProject).putCustom(IndexLifecycleMetadata.TYPE, lifecycleMetadata).build();
+        registry.update(currentProject.custom(IndexLifecycleMetadata.TYPE));
         assertTrue(registry.getLifecyclePolicyMap().isEmpty());
         assertTrue(registry.getFirstStepMap().isEmpty());
         assertTrue(registry.getStepMap().isEmpty());
@@ -291,41 +257,26 @@ public class PolicyStepsRegistryTests extends ESTestCase {
             headers.put(randomAlphaOfLength(10), randomAlphaOfLength(10));
             headers.put(randomAlphaOfLength(10), randomAlphaOfLength(10));
         }
-        Map<String, LifecyclePolicyMetadata> policyMap = Collections.singletonMap(
+        Map<String, LifecyclePolicyMetadata> policyMap = Map.of(
             newPolicy.getName(),
             new LifecyclePolicyMetadata(newPolicy, headers, randomNonNegativeLong(), randomNonNegativeLong())
         );
         IndexLifecycleMetadata lifecycleMetadata = new IndexLifecycleMetadata(policyMap, OperationMode.RUNNING);
-        Metadata metadata = Metadata.builder()
-            .persistentSettings(settings(IndexVersion.current()).build())
+        ProjectMetadata currentProject = ProjectMetadata.builder(randomProjectIdOrDefault())
             .putCustom(IndexLifecycleMetadata.TYPE, lifecycleMetadata)
-            .build();
-        String nodeId = randomAlphaOfLength(10);
-        DiscoveryNode masterNode = DiscoveryNodeUtils.builder(nodeId)
-            .applySettings(NodeRoles.masterNode(settings(IndexVersion.current()).build()))
-            .address(new TransportAddress(TransportAddress.META_ADDRESS, 9300))
-            .build();
-        ClusterState currentState = ClusterState.builder(ClusterName.DEFAULT)
-            .metadata(metadata)
-            .nodes(DiscoveryNodes.builder().localNodeId(nodeId).masterNodeId(nodeId).add(masterNode).build())
             .build();
         PolicyStepsRegistry registry = new PolicyStepsRegistry(NamedXContentRegistry.EMPTY, client, null);
         // add new policy
-        registry.update(currentState.metadata().custom(IndexLifecycleMetadata.TYPE));
+        registry.update(currentProject.custom(IndexLifecycleMetadata.TYPE));
 
         // swap out policy
         newPolicy = LifecyclePolicyTests.randomTestLifecyclePolicy(policyName);
         lifecycleMetadata = new IndexLifecycleMetadata(
-            Collections.singletonMap(
-                policyName,
-                new LifecyclePolicyMetadata(newPolicy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
-            ),
+            Map.of(policyName, new LifecyclePolicyMetadata(newPolicy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong())),
             OperationMode.RUNNING
         );
-        currentState = ClusterState.builder(currentState)
-            .metadata(Metadata.builder(metadata).putCustom(IndexLifecycleMetadata.TYPE, lifecycleMetadata))
-            .build();
-        registry.update(currentState.metadata().custom(IndexLifecycleMetadata.TYPE));
+        currentProject = ProjectMetadata.builder(currentProject).putCustom(IndexLifecycleMetadata.TYPE, lifecycleMetadata).build();
+        registry.update(currentProject.custom(IndexLifecycleMetadata.TYPE));
         // TODO(talevy): assert changes... right now we do not support updates to policies. will require internal cleanup
     }
 
@@ -350,13 +301,12 @@ public class PolicyStepsRegistryTests extends ESTestCase {
         LifecyclePolicy updatedPolicy = new LifecyclePolicy(policyName, phases);
         logger.info("--> policy: {}", newPolicy);
         logger.info("--> updated policy: {}", updatedPolicy);
-        List<Step> policySteps = newPolicy.toSteps(client, null);
         Map<String, String> headers = new HashMap<>();
         if (randomBoolean()) {
             headers.put(randomAlphaOfLength(10), randomAlphaOfLength(10));
             headers.put(randomAlphaOfLength(10), randomAlphaOfLength(10));
         }
-        Map<String, LifecyclePolicyMetadata> policyMap = Collections.singletonMap(
+        Map<String, LifecyclePolicyMetadata> policyMap = Map.of(
             newPolicy.getName(),
             new LifecyclePolicyMetadata(newPolicy, headers, randomNonNegativeLong(), randomNonNegativeLong())
         );
@@ -364,40 +314,24 @@ public class PolicyStepsRegistryTests extends ESTestCase {
         LifecycleExecutionState.Builder lifecycleState = LifecycleExecutionState.builder();
         lifecycleState.setPhase("warm");
         lifecycleState.setPhaseDefinition(phaseJson);
-        Metadata metadata = Metadata.builder()
-            .persistentSettings(settings(IndexVersion.current()).build())
-            .putCustom(IndexLifecycleMetadata.TYPE, lifecycleMetadata)
-            .put(
-                IndexMetadata.builder("test")
-                    .settings(
-                        indexSettings(1, 0).put("index.uuid", "uuid")
-                            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
-                            .put(LifecycleSettings.LIFECYCLE_NAME, policyName)
-                    )
-                    .putCustom(ILM_CUSTOM_METADATA_KEY, lifecycleState.build().asMap())
+        IndexMetadata indexMetadata = IndexMetadata.builder("test")
+            .settings(
+                indexSettings(1, 0).put("index.uuid", "uuid")
+                    .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
+                    .put(LifecycleSettings.LIFECYCLE_NAME, policyName)
             )
+            .putCustom(ILM_CUSTOM_METADATA_KEY, lifecycleState.build().asMap())
             .build();
-        try (XContentBuilder builder = JsonXContent.contentBuilder()) {
-            builder.startObject();
-            ChunkedToXContent.wrapAsToXContent(metadata).toXContent(builder, ToXContent.EMPTY_PARAMS);
-            builder.endObject();
-            logger.info("--> metadata: {}", Strings.toString(builder));
-        }
-        String nodeId = randomAlphaOfLength(10);
-        DiscoveryNode masterNode = DiscoveryNodeUtils.builder(nodeId)
-            .applySettings(NodeRoles.masterNode(settings(IndexVersion.current()).build()))
-            .address(new TransportAddress(TransportAddress.META_ADDRESS, 9300))
-            .build();
-        ClusterState currentState = ClusterState.builder(ClusterName.DEFAULT)
-            .metadata(metadata)
-            .nodes(DiscoveryNodes.builder().localNodeId(nodeId).masterNodeId(nodeId).add(masterNode).build())
+        ProjectMetadata currentProject = ProjectMetadata.builder(randomProjectIdOrDefault())
+            .putCustom(IndexLifecycleMetadata.TYPE, lifecycleMetadata)
+            .put(indexMetadata, false)
             .build();
 
         // start with empty registry
         PolicyStepsRegistry registry = new PolicyStepsRegistry(REGISTRY, client, null);
 
         // add new policy
-        registry.update(currentState.metadata().custom(IndexLifecycleMetadata.TYPE));
+        registry.update(currentProject.custom(IndexLifecycleMetadata.TYPE));
 
         Map<Step.StepKey, Step> registeredStepsForPolicy = registry.getStepMap().get(newPolicy.getName());
         Step shrinkStep = registeredStepsForPolicy.entrySet()
@@ -406,27 +340,30 @@ public class PolicyStepsRegistryTests extends ESTestCase {
             .findFirst()
             .get()
             .getValue();
-        Step gotStep = registry.getStep(metadata.index(index), shrinkStep.getKey());
-        assertThat(((ShrinkStep) shrinkStep).getNumberOfShards(), equalTo(1));
-        assertThat(((ShrinkStep) gotStep).getNumberOfShards(), equalTo(1));
+        Step gotStep = registry.getStep(currentProject.index(index), shrinkStep.getKey());
+        assertThat(
+            ((ResizeIndexStep) shrinkStep).getTargetIndexSettingsSupplier()
+                .apply(indexMetadata)
+                .getAsInt(IndexMetadata.SETTING_NUMBER_OF_SHARDS, -1),
+            equalTo(1)
+        );
+        assertThat(
+            ((ResizeIndexStep) gotStep).getTargetIndexSettingsSupplier()
+                .apply(indexMetadata)
+                .getAsInt(IndexMetadata.SETTING_NUMBER_OF_SHARDS, -1),
+            equalTo(1)
+        );
 
         // Update the policy with the new policy, but keep the phase the same
-        policyMap = Collections.singletonMap(
+        policyMap = Map.of(
             updatedPolicy.getName(),
             new LifecyclePolicyMetadata(updatedPolicy, headers, randomNonNegativeLong(), randomNonNegativeLong())
         );
         lifecycleMetadata = new IndexLifecycleMetadata(policyMap, OperationMode.RUNNING);
-        metadata = Metadata.builder(metadata).putCustom(IndexLifecycleMetadata.TYPE, lifecycleMetadata).build();
-        try (XContentBuilder builder = JsonXContent.contentBuilder()) {
-            builder.startObject();
-            ChunkedToXContent.wrapAsToXContent(metadata).toXContent(builder, ToXContent.EMPTY_PARAMS);
-            builder.endObject();
-            logger.info("--> metadata: {}", Strings.toString(builder));
-        }
-        currentState = ClusterState.builder(ClusterName.DEFAULT).metadata(metadata).build();
+        currentProject = ProjectMetadata.builder(currentProject).putCustom(IndexLifecycleMetadata.TYPE, lifecycleMetadata).build();
 
         // Update the policies
-        registry.update(currentState.metadata().custom(IndexLifecycleMetadata.TYPE));
+        registry.update(currentProject.custom(IndexLifecycleMetadata.TYPE));
 
         registeredStepsForPolicy = registry.getStepMap().get(newPolicy.getName());
         shrinkStep = registeredStepsForPolicy.entrySet()
@@ -435,9 +372,19 @@ public class PolicyStepsRegistryTests extends ESTestCase {
             .findFirst()
             .get()
             .getValue();
-        gotStep = registry.getStep(metadata.index(index), shrinkStep.getKey());
-        assertThat(((ShrinkStep) shrinkStep).getNumberOfShards(), equalTo(2));
-        assertThat(((ShrinkStep) gotStep).getNumberOfShards(), equalTo(1));
+        gotStep = registry.getStep(currentProject.index(index), shrinkStep.getKey());
+        assertThat(
+            ((ResizeIndexStep) shrinkStep).getTargetIndexSettingsSupplier()
+                .apply(indexMetadata)
+                .getAsInt(IndexMetadata.SETTING_NUMBER_OF_SHARDS, -1),
+            equalTo(2)
+        );
+        assertThat(
+            ((ResizeIndexStep) gotStep).getTargetIndexSettingsSupplier()
+                .apply(indexMetadata)
+                .getAsInt(IndexMetadata.SETTING_NUMBER_OF_SHARDS, -1),
+            equalTo(1)
+        );
     }
 
     public void testGetStepMultithreaded() throws Exception {
@@ -457,7 +404,7 @@ public class PolicyStepsRegistryTests extends ESTestCase {
             .build();
 
         SortedMap<String, LifecyclePolicyMetadata> metas = new TreeMap<>();
-        metas.put("policy", new LifecyclePolicyMetadata(policy, Collections.emptyMap(), 1, randomNonNegativeLong()));
+        metas.put("policy", new LifecyclePolicyMetadata(policy, Map.of(), 1, randomNonNegativeLong()));
         IndexLifecycleMetadata meta = new IndexLifecycleMetadata(metas, OperationMode.RUNNING);
 
         PolicyStepsRegistry registry = new PolicyStepsRegistry(REGISTRY, client, null);
